# marionette

./: CMakeLists.txt  package.xml
config/: marionette.yaml
include/: dyn_ros.h
launch/: .dyn_controller.launch.swp  dyn_controller.launch
nodes/: .configureParams.py.swp  configureParams.py
src/: dxl_hal.c  dyn_ros.cpp  dynamixel.c
